// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rootEdgeComponent snapshot renders 1`] = `
<Component
  graphProps={
    Object {
      "domain": Object {
        "max": 1,
        "min": 0,
        "step": 1,
      },
      "range": Object {
        "max": 1,
        "min": 0,
        "step": 1,
      },
      "scale": Object {
        "x": [MockFunction],
        "y": [MockFunction],
      },
      "size": Object {
        "height": 400,
        "width": 400,
      },
      "snap": Object {
        "x": [MockFunction],
        "y": [MockFunction],
      },
    }
  }
  mark={
    Object {
      "from": Object {
        "x": 0,
        "y": 0,
      },
      "to": Object {
        "x": 1,
        "y": 1,
      },
    }
  }
  onChange={[Function]}
/>
`;

exports[`rootEdgeToToFromWRapper renders 1`] = `
<Component
  mark={
    Object {
      "from": Object {
        "x": 1,
        "y": 1,
      },
      "to": Object {
        "x": 2,
        "y": 2,
      },
    }
  }
  onChange={[Function]}
/>
`;
